# ASL_Translator

./: .gitignore  README.md  classify.py  firmwareDeploy.sh  label_map.txt  replace_init.sh  requirements.txt  setup.sh  start.sh  start_algo.sh  start_app.sh  video_classifier.py
algorithm/: .gitignore  CMakeLists.txt  main.cpp
application/: CMakeLists.txt  README.md  main.cpp
application/include/: main.h  unitTest.h  visConfig.h  visControl.h  visController.h  visGui.h  visIpcMsg.h  visTaskQueue.h  visThreadPool.h  visThreads.h
application/include/gpiod/lib/: libgpiod.la  libgpiod.so.2.2.2
application/include/gpiod/lib/pkgconfig/: libgpiod.pc
application/include/lib/Config/: DEV_Config.h
application/include/lib/GUI/: GUI_BMPfile.h  GUI_Paint.h
application/include/lib/OLED/: OLED_0in96.h  OLED_0in96_rgb.c  OLED_0in96_rgb.h  OLED_1in27_rgb.c  OLED_1in27_rgb.h  OLED_1in32.c  OLED_1in32.h  OLED_1in3_c.c  OLED_1in51.h  OLED_1in54.c  OLED_1in54.h  OLED_1in5_b.c  OLED_1in5_b.h  OLED_1in5_rgb.c  OLED_2in42.c  OLED_2in42.h
application/init_script/: visapp
application/source/: DEV_Config.cpp  GUI_BMPfile.cpp  GUI_Paint.cpp  OLED_1in51.cpp  font12.cpp  font16.cpp  font20.cpp  font24.cpp  font8.cpp  helloworld.cpp  visControl.cpp  visIpcMsg.cpp  visThreads.cpp
application/unit_test/: main.cpp  test_oled.cpp
buildroot-2024.02/docs/manual/: manual.html  manual.text
emdebian/mindb/: .gitignore  config_rootfs.sh  multistrap_mindb.conf
linux/: .gitignore
linux/arch/arm/boot/dts/: sun8i-v3s-licheepi-zero-dock.dts  sun8i-v3s-licheepi-zero.dts  sun8i-v3s.dtsi
python_lib/: ASL_alphabet.tflite  classify_alphabet.py  classify_rasp.py  classify_v2.py  evaluate_alphabet.py  good_label_map.txt  hand_detect.py  label_map_ASL.txt  label_map_ASL_big.txt  model_no_transforms.tflite  video_classifier.py  visSocket.py
python_lib/model/: saved_model.pb
python_lib/model/variables/: variables.index
u-boot/: .gitignore  boot.cmd
u-boot/include/configs/: sun8i.h
u-boot/lib/efi_loader/: helloworld.efi
